feat: add authentication login and register
